<resources>
    <string name="app_name">Quote Generator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="zero">0</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="generate_another_quote">Generate Another Quote</string>
    <string name="quote">“All I required to be happy was friendship and people I could admire.”</string>
    <string name="author_name">Christian Dior</string>
    <string name="favorite_quotes">Click Here To View Favorite Quotes</string>
    <string name="back_to_home_screen">Back To Home Screen</string>
    <string name="search">Type Something Here To Search..</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
</resources>