<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#FBFBFB"
            android:elevation="3dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/gemunulibre_semibold"
                    android:text="@string/quote"
                    android:textColor="#323232"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_below="@+id/content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/gemunu_light"
                    android:gravity="center"
                    android:text="@string/author_name"
                    android:textSize="22sp" />


                <Button
                    android:id="@+id/favoriteBtn"
                    android:layout_width="313dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/author"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/buttom_border"
                    android:fontFamily="@font/gemunu_light"
                    android:text="@string/remove_from_favorite"
                    android:textAllCaps="false"
                    android:textColor="#8249B5"
                    android:textSize="20sp"
                    app:icon="@drawable/hartblock"
                    app:iconGravity="textStart"
                    app:iconSize="20dp"
                    app:iconTint="#8249B5" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>
