<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_gradient_drawable"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".QuoteScreen">

        <RelativeLayout
            android:layout_width="363dp"
            android:layout_height="76dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/numberOfQuotes"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="331dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="44dp"
                android:background="@drawable/circle_text"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#FBFBFB"
                android:textSize="22sp"
                android:elevation="10dp"/>

            <Button
                android:id="@+id/goToFavorite"
                android:layout_width="353dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#CFBBF0"
                android:fontFamily="@font/gemunu_light"
                android:text="@string/favorite_quotes"
                android:textAllCaps="false"
                android:textColor="#323232"
                android:textSize="21sp" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="3dp"
            app:cardCornerRadius="5dp"
            android:background="#FBFBFB">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/gemunulibre_semibold"
                    android:textColor="#323232"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_below="@+id/content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/gemunu_light"
                    android:gravity="center"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/generateBtn"
                    android:layout_width="203dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/author"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="17dp"
                    android:layout_toStartOf="@+id/favoriteBtn"
                    android:backgroundTint="#8249B5"
                    android:fontFamily="@font/gemunu_light"
                    android:text="@string/generate_another_quote"
                    android:textAllCaps="false"
                    android:textColor="#FBFBFB"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/favoriteBtn"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/author"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/buttom_border"
                    android:contentDescription="@string/add_to_favorite"
                    android:gravity="center"
                    android:src="@drawable/hart"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="137dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="168dp"
                    android:visibility="gone" />
            </RelativeLayout>



        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>